Fix image on mobile

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ h1 {
 
 #contact-box img {
     max-width: 200px;
+    height: auto;
 }
 
 .linkedin {
